# ncd

./: .gitignore  Makefile.am  Makefile.in  NEWS  README.md  autogen.sh  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  bzlib.c  compressors.c  config.h.in  doncd.c  fileop.c  mat.c  ncd.c  ncd.h  zlib.c
src/ppmd/: Ppmd.h  Ppmd7.h  export.c  export.h
